--- a/backend/vending-machine/src/main/resources/cloudbuild.yaml
+++ b/backend/vending-machine/src/main/resources/cloudbuild.yaml
@@ -1,8 +1,8 @@
 steps:
   - name: gcr.io/cloud-builders/gcloud
-    entrypoint: /bin/sh
+    entrypoint: /home/danylo_kovalchuk_ir_2021
     args:
       - '-c'
       - |
         set -x && \
-        gcloud compute ssh vending-machine --zone=europe-north1-a --command='/bin/sh /home/danylo_kovalchuk_ir_2021/startup.sh'
+        gcloud compute ssh vending-machine --zone=europe-north1-a --command='startup.sh'
