--- a/backend/vending-machine/src/main/resources/cloudbuild.yaml
+++ b/backend/vending-machine/src/main/resources/cloudbuild.yaml
@@ -1,8 +1,33 @@
-steps:
-  - name: gcr.io/cloud-builders/gcloud
-    entrypoint: /bin/sh
-    args:
-      - '-c'
-      - |
-        set -x && \
-        gcloud compute ssh vending-machine --zone=europe-north1-a --command='/bin/sh /home/danylo_kovalchuk_ir_2021/startup.sh'
+name: Java CI with Maven
+
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
+jobs:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+      
+    - name: Setup Google Cloud SDK
+      uses: google-github-actions/setup-gcloud@v0
+
+    - name: Set up JDK 17
+      uses: actions/setup-java@v2
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
+    - name: Build and test
+      working-directory: ./backend/vending-machine
+      run: mvn clean install
+
+    # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+    - name: Update dependency graph
+      uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
