--- a/backend/vending-machine/src/main/resources/application.properties
+++ b/backend/vending-machine/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-spring.datasource.url=jdbc:mysql://google/vending_machine?cloudSqlInstance=avian-slice-404222:europe-west1:vending-machine&socketFactory=com.google.cloud.sql.mysql.SocketFactory
-spring.datasource.username=root
-spring.datasource.password=vendingroot
+spring.datasource.url=${DB_URL}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 debug=false
 jpa.show-sql=true
 jpa.hibernate.ddl-auto=update
 jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 mvc.pathmatch.matching-strategy=ant_path_matcher
-server.port=8080
+server.port=${APP_PORT}
