--- a/backend/vending-machine/src/main/resources/application.properties
+++ b/backend/vending-machine/src/main/resources/application.properties
@@ -8,4 +8,4 @@ jpa.show-sql=true
 jpa.hibernate.ddl-auto=update
 jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 mvc.pathmatch.matching-strategy=ant_path_matcher
-server.port=${APP_PORT}
+server.port=8080
