--- a/backend/vending-machine/src/main/resources/application.properties
+++ b/backend/vending-machine/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
-spring.datasource.url=${DB_URL}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.url=jdbc:mysql://google/${DB_NAME}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
