--- a/backend/vending-machine/src/main/resources/application.properties
+++ b/backend/vending-machine/src/main/resources/application.properties
@@ -1,9 +1,11 @@
 spring.devtools.livereload.enabled=false
 spring.cloud.gcp.sql.database-name=${DB_NAME}
-spring.datasource.url=jdbc:mysql://${DB_IP}:3306/${DB_NAME}
+spring.datasource.url=jdbc:mysql://google/${DB_NAME}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.cloud.gcp.sql.instance-connection-name=${DB_CONNECTION_NAME}
+jpa.hibernate.ddl-auto=update
+jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 debug=false
