--- a/backend/vending-machine/src/main/resources/application.properties
+++ b/backend/vending-machine/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.devtools.livereload.enabled=false
 spring.cloud.gcp.sql.database-name=${DB_NAME}
-spring.datasource.url=jdbc:mysql://google/${DB_NAME}?socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.url=jdbc:mysql://google/${DB_NAME}?cloudSqlInstance=avian-slice-404222:europe-west1:vending-machine&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 spring.cloud.gcp.sql.instance-connection-name=${DB_CONNECTION_NAME}
