--- a/backend/vending-machine/src/main/resources/application.properties
+++ b/backend/vending-machine/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 spring.devtools.livereload.enabled=false
 spring.cloud.gcp.sql.database-name=${DB_NAME}
-spring.datasource.url=jdbc:mysql://google/${DB_NAME}?cloudSqlInstance=avian-slice-404222:europe-west1:vending-machine&socketFactory=com.google.cloud.sql.mysql.SocketFactory
-spring.datasource.username=root
-spring.datasource.password=e745nvTQqt2U3a
-spring.cloud.gcp.sql.instance-connection-name=${DB_CONNECTION_NAME}
+spring.datasource.url=${DB_URL}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 jpa.hibernate.ddl-auto=update
 jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
