--- a/backend/vending-machine/src/main/resources/application.properties
+++ b/backend/vending-machine/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 spring.devtools.livereload.enabled=false
-spring.cloud.gcp.sql.database-name=${DB_NAME}
-spring.datasource.url=${DB_URL}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.url=jdbc:mysql://google/${DB_NAME}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.mysql.SocketFactory
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
 jpa.hibernate.ddl-auto=update
