--- a/backend/vending-machine/src/main/resources/application.properties
+++ b/backend/vending-machine/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.devtools.livereload.enabled=false
-spring.datasource.url=jdbc:mysql://google/${DB_NAME}?cloudSqlInstance=${DB_CONNECTION_NAME}&socketFactory=com.google.cloud.sql.mysql.SocketFactory
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:mysql://google/vending_machine?cloudSqlInstance=avian-slice-404222:europe-west1:vending-machine&socketFactory=com.google.cloud.sql.mysql.SocketFactory
+spring.datasource.username=root
+spring.datasource.password=cXqVlDE7~ofifAnl
 jpa.hibernate.ddl-auto=update
 jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mvc.pathmatch.matching-strategy=ant_path_matcher
